crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badShaderImplSource.usdc
version https://git-lfs.github.com/spec/v1
oid sha256:f9b5509f64d4e047b986d63412792c9bc8c5bf8a61cfeb1412d745ffe7e37521
size 735
